[package]
name = "use_css"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[workspace]
members = ["use_css_procmacros"]
package.authors = ["Gooxey <dennis.tiderko@gmail.com>"]
package.categories = ["wasm", "web-programming"]
package.description = "Define styles for your yew components inside CSS files."
package.edition = "2021"
package.keywords = ["css", "css-in-rust" ,"yew", "web", "stylist"]
package.license = "MIT"
package.repository = "https://github.com/Gooxey/use_css.git"
package.version = "0.2.0"

[dependencies]
use_css_procmacros = { path = "use_css_procmacros", version = "0.*" }
stylist = { version = "0.12.0", features = ["yew", "parser"] }
